samples/_failures_safe/1761340566_e242a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21a008ff.c: In function ‘main’:
./samples/SAFE/__tmp_21a008ff.c:138:100: error: ‘output’ undeclared (first use in this function)
  138 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer, sizeof(output
      |                                                                                                    ^~~~~~
./samples/SAFE/__tmp_21a008ff.c:138:100: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_21a008ff.c:138:106: error: expected ‘)’ at end of input
  138 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer, sizeof(output
      |                                                                                                   ~      ^
      |                                                                                                          )
./samples/SAFE/__tmp_21a008ff.c:138:5: error: expected declaration or statement at end of input
  138 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer, sizeof(output
      |     ^~~~~~
